<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/room_setting_bg"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/room_name_tv"
        style="@style/room_setting_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="23dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="13dp"
        android:text="@string/room_setting_time" />

    <TextView
        android:id="@+id/textView2"
        style="@style/room_setting_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/room_name_tv"
        android:layout_below="@+id/room_name_tv"
        android:layout_marginBottom="10dp"
        android:text="@string/room_setting_record" />

    <LinearLayout
        android:id="@+id/room_setting_time_sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/room_name_tv"
        android:layout_alignTop="@+id/room_name_tv"
        android:layout_toRightOf="@+id/room_name_tv"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/room_setting_time_up_btn"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/time_up_btn_bg" />

        <TextView
            android:id="@+id/room_setting_time_tv"
            style="@style/room_setting_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="10分钟" />

        <Button
            android:id="@+id/room_setting_time_down_btn"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:background="@drawable/time_down_btn_bg" />
    </LinearLayout>

    <Button
        android:id="@+id/room_setting_confirm_btn"
        style="@style/room_setting_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:background="@drawable/create_room_btn_bg"
        android:text="@string/room_setting_create" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/room_setting_time_sp"
        android:layout_alignRight="@+id/room_setting_time_sp"
        android:layout_alignTop="@+id/textView2"
        android:gravity="center" >

        <CheckBox
            android:id="@+id/room_setting_record_cb"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_marginRight="5dp"
            android:button="@drawable/room_setting_cb_bg"
            android:checked="true" />

        <TextView
            android:id="@+id/room_setting_record_tv"
            style="@style/room_setting_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_setting_open" />
    </LinearLayout>

</RelativeLayout>